--- a/OS Sistem/Random Password Generator/style.css
+++ b/OS Sistem/Random Password Generator/style.css
@@ -30,7 +30,7 @@ h1 {
 .container {
   padding: 20px;
   background-color: #e3e3e3;
-  box-shadow: 2px 3px 9px cinza;
+  box-shadow: 2px 3px 9px grey;
   border-radius: 6px;
   margin: 30px 0;
   width: 100%;
@@ -41,7 +41,7 @@ h1 {
   padding: 20px;
 }
 
-.pword {
+.password {
   border-radius: 6px;
   background-color: #f5f5f5;
   color: #333;
@@ -54,7 +54,7 @@ h1 {
   padding: 10px;
 }
 
-.pword button {
+.password button {
   background-color: #e3e3e3;
   border: none;
   color: #333;
@@ -68,14 +68,14 @@ h1 {
   opacity: 0;
 }
 
-.pword button:hover {
+.password button:hover {
   background-color: #fff;
   color: #000;
   opacity: 1;
   transform: translate(0, 0%);
 }
 
-.pword__body {
+.password__body {
   padding: 0 20px;
 }
 
@@ -104,7 +104,7 @@ h1 {
 }
 
 .generate:hover {
-  box-shadow: 1px 2px 8px cinza;
+  box-shadow: 1px 2px 8px grey;
   background-color: #333;
   color: #f5f5f5;
   transition: 0.8s;
@@ -126,10 +126,10 @@ h1 {
   .generate {
     font-size: 1rem;
   }
-  .pword {
+  .password {
     font-size: 1.2rem;
   }
-  .pword__body {
+  .password__body {
     padding: 0 10px;
   }
   .header {
